LCDF Typetools NEWS

Version 0.53   10.Aug.2003

* Fix problem with Type 1 output in '--without-kpathsea' reported by Adam
  Lindsay.


Version 0.52   7.Aug.2003

* Attempt to fix some build problems reported by Nelson H.F. Beebe.


Version 0.51   5.Aug.2003

* otftotfm: Fix crashes with small encodings and absent boundary
  characters. Reported by Bruce D'Arcus.

* otftotfm: Add '--boundary-char' and '--kpathsea-debug' options.


Version 0.50   4.Aug.2003

* otftotfm: Handle more complex substitutions, such as those required to
  support '-fordn' and '-ffrac'.

* otftotfm: The output virtual and base fonts can have different
  "encodings" with overlapping encoding slots. This can make fonts more
  compact.

* When assigning slots to introduced characters, otftotfm prefers
  characters introduced by earlier lookups. This follows the spirit of the
  OpenType specification, since early lookups in some ways "override" later
  ones. The previous scoring mechanism remains in force within each
  individual lookup.

* otftotfm: Rewrite GsubEncoding to Metrics, changing its fundamental
  abstraction (to two-ligatures). Simpler and cleaner overall.

* otftotfm TODO: Ligatures that apply to middle or right context (for
  example, the two substitutions "a b c d => a b c y" and "b c => x" should
  combine to "a b c d => a x y", but they won't yet).


Version 0.19   30.Jul.2003

* otftotfm: Add support for 'emptyslot' UNICODINGs. Requested by Marco
  Kuhlmann.


Version 0.18   9.Jul.2003

* Otftotfm will now synthesize characters for some T1 glyphs automatically,
  specifically 'cwm' (compound word mark), 'visualspace', and 'Germandbls'.
  Requested by Marco Kuhlmann.

* The glyphlist.txt file contains Unicode mappings for character names
  found in the BlueSky Computer Modern math italic and symbol fonts.

* It also contains fake Unicode mappings for the 'cwm', 'visualspace', and
  'Germandbls' characters found in EC.enc.
