@@ -5,6 +5,8 @@ Version 0.53   10.Aug.2003
 * Fix problem with Type 1 output in '--without-kpathsea' reported by Adam
   Lindsay.
 
+* Fix crash on encodings containing 'emptyslot' reported by Marco Kuhlmann.
+
 
 Version 0.52   7.Aug.2003
 
